daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N12_bad_claims_hash/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae301584055d3f34293d0e44a93148c4b1efc3a02ee14cc0839673c38057e4d56541b25c695c668063f9ad694b763288c8d831d7584f026849098b9106d7104997300170401f602f6
